# fractal

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  isort.cfg  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
examples/basic/app/: context.py  main.py  settings.py
fractal/: __init__.py
fractal/contrib/django/: middleware.py  projectors.py  repositories.py  requirements.txt  specifications.py
fractal/contrib/fastapi/: install.py  requirements.txt
fractal/contrib/gcp/: __init__.py
fractal/contrib/kafka/: README.md  docker-compose.yml  event_bus.py  projectors.py
fractal/contrib/mongo/: repositories.py  specifications.py
fractal/contrib/rabbitmq/: event_bus.py  projectors.py  utils.py
fractal/contrib/roles/: models.py  services.py
fractal/contrib/sqlalchemy/: repositories.py  specifications.py
fractal/contrib/tokens/: exceptions.py  fractal.py  models.py  services.py  settings.py
fractal/core/command_bus/: command.py  command_bus.py  command_handler.py  commands.py
fractal/core/event_sourcing/: event.py  event_bus.py  event_projector.py  event_publisher.py  event_store.py  event_stream.py  message.py  models.py  repositories.py
fractal/core/exceptions/: __init__.py
fractal/core/models/: __init__.py
fractal/core/process/: action.py  process.py  process_context.py  process_scope.py  specifications.py
fractal/core/repositories/: __init__.py  external_data_inmemory_repository_mixin.py  file_repository_mixin.py  filter_repository_mixin.py  inmemory_repository_mixin.py  sort_repository_mixin.py
fractal/core/services/: __init__.py
fractal/core/specifications/: account_id_specification.py  (+3 more)
tests/: conftest.py
tests/fixtures/: __init__.py  specifications.py
tests/unit/: test_specifications.py
(+108 files in other folders)
