[tool.poetry]
name = "fractal-toolkit"
version = "4.1.2"
description = "Fractal is a scaffolding toolkit for building SOLID logic for your Python applications."
authors = ["Douwe van der Meij <douwe@karibu-online.nl>"]

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fractal"
dist-name = "fractal-toolkit"
author = "Douwe van der Meij"
author-email = "douwe@karibu-online.nl"
home-page = "https://github.com/douwevandermeij/fractal"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
description-file = "README.md"
requires = [
    "fractal-repositories",
    "fractal-roles",
    "fractal-specifications",
    "fractal-tokens",
    "python-dotenv",
]
requires-python=">=3.8"

[tool.flit.metadata.requires-extra]
test = [
    "black",
    "flake8",
    "isort",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
